<resources>
    <string name="app_name">UnSpammer</string>
    <string name="action_settings">Settings</string>
    <string name="edit_blacklist">Edit List</string>

    <string name="empty_list_notice">No contact BLACKLISTED. Click the FAB to add contacts to the BLACKLIST.</string>

    <string name="fab_add_contact">Add contacts.</string>
    <string name="fab_remove_all">Remove all contacts</string>
    <string name="row_item_name_content_desc_prefix">Row item name: </string>
    <string name="row_item_number_content_desc_prefix">Row item number: </string>
    <string name="service_started">UnSpammer is enabled.</string>
    <string name="service_stopped">UnSpammer is disabled.</string>
    <string name="rejected">Rejected call from: </string>
    <string name="dialog_title">Confirmation</string>
    <string name="dialog_message">Are you sure to remove all the contacts? </string>
    <string name="all_numbers_deleted">All the numbers are deleted.</string>
    <string name="list_heading">The spamming contacts\' calls will automatically get rejected.</string>

    <string name="app_widget_text">Call Allower On/Off Switch</string>
    <string name="add_widget">Add widget</string>

    <string name="desc_widget_button">Toggle UnSpammer On or Off.</string>
    <string name="desc_widget_blocker_on">UnSpammer is enabled.</string>
    <string name="desc_widget_blocker_off">UnSpammer is disabled.</string>
    <string name="desc_fab_menu">Add or Remove contacts from list.</string>
    <string name="desc_fab_add_contact">Add contacts.</string>
    <string name="desc_fab_remove_all">Remove all contacts from list.</string>
    <string name="desc_switch_on_off">UnSpammer On or Off switch.</string>
    <string name="desc_edit_list_recycler_view">Blacklisted contacts.</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="desc_ad">Advertisement</string>

    <string name="contacts_permission_not_granted">Please grant the contacts permission.</string>
    <string name="telephone_permission_not_granted">Please grant the telephone permission.</string>
    <string name="fab_add_contact_label">Add contacts.</string>
    <string name="fab_remove_all_label">Remove all contacts from list.</string>
    <string name="app_intro">UnSpammer</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="dial">Dial</string>
    <string name="nothing">...</string>
    <string name="del">Del</string>
    <string name="star">*</string>
    <string name="_0">0</string>
    <string name="hash">#</string>
    <string name="type_number_here">Type number here to place a CALL</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="click_on_the_fab_to_block_numbers">Click on the FAB to Block Numbers</string>
</resources>
